--- a/learnapp/templates/base.html
+++ b/learnapp/templates/base.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <a href="{% url 'index' %}">Home</a>
+        <a href="{% url 'about' %}">About</a>
+        <a href="{% url 'contact' %}">Contact</a>
+    </nav>
     {% block content %}
     
     {% endblock %}
